src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void MSTEdge_Delete(void* self);
extern "C" __declspec(dllexport) int MSTEdge_source_get(void* self);
extern "C" __declspec(dllexport) void MSTEdge_source_set(void* self, int val);
extern "C" __declspec(dllexport) int MSTEdge_target_get(void* self);
extern "C" __declspec(dllexport) void MSTEdge_target_set(void* self, int val);
extern "C" __declspec(dllexport) double MSTEdge_weight_get(void* self);
extern "C" __declspec(dllexport) void MSTEdge_weight_set(void* self, double val);
extern "C" __declspec(dllexport) void Subdiv2D_Delete(void* self);
extern "C" __declspec(dllexport) void* Subdiv2D_New_0();
extern "C" __declspec(dllexport) void* Subdiv2D_New_1(cv::Rect rect);
extern "C" __declspec(dllexport) void* Subdiv2D_New_2(cv::Rect2f rect2f);
extern "C" __declspec(dllexport) void Subdiv2D_initDelaunay_0(void* self, cv::Rect rect);
extern "C" __declspec(dllexport) void Subdiv2D_initDelaunay_1(void* self, cv::Rect2f rect);
extern "C" __declspec(dllexport) int Subdiv2D_insert_0(void* self, cv::Point2f pt);
extern "C" __declspec(dllexport) void Subdiv2D_insert_1(void* self, void* ptvec);
extern "C" __declspec(dllexport) int Subdiv2D_locate_0(void* self, cv::Point2f pt, int edge, int vertex);
extern "C" __declspec(dllexport) int Subdiv2D_findNearest_0(void* self, cv::Point2f pt, void* nearestPt);
extern "C" __declspec(dllexport) void Subdiv2D_getEdgeList_0(void* self, void* edgeList);
extern "C" __declspec(dllexport) void Subdiv2D_getLeadingEdgeList_0(void* self, void* leadingEdgeList);
extern "C" __declspec(dllexport) void Subdiv2D_getTriangleList_0(void* self, void* triangleList);
extern "C" __declspec(dllexport) void Subdiv2D_getVoronoiFacetList_0(void* self, void* idx, void* facetList, void* facetCenters);
extern "C" __declspec(dllexport) cv::Point2f Subdiv2D_getVertex_0(void* self, int vertex, void* firstEdge);
extern "C" __declspec(dllexport) int Subdiv2D_getEdge_0(void* self, int edge, int nextEdgeType);
extern "C" __declspec(dllexport) int Subdiv2D_nextEdge_0(void* self, int edge);
extern "C" __declspec(dllexport) int Subdiv2D_rotateEdge_0(void* self, int edge, int rotate);
extern "C" __declspec(dllexport) int Subdiv2D_symEdge_0(void* self, int edge);
extern "C" __declspec(dllexport) int Subdiv2D_edgeOrg_0(void* self, int edge, void* orgpt);
extern "C" __declspec(dllexport) int Subdiv2D_edgeDst_0(void* self, int edge, void* dstpt);
extern "C" __declspec(dllexport) void UsacParams_Delete(void* self);
extern "C" __declspec(dllexport) void* UsacParams_New_0();
extern "C" __declspec(dllexport) double UsacParams_confidence_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_confidence_set(void* self, double val);
extern "C" __declspec(dllexport) bool UsacParams_isParallel_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_isParallel_set(void* self, bool val);
extern "C" __declspec(dllexport) int UsacParams_loIterations_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_loIterations_set(void* self, int val);
extern "C" __declspec(dllexport) int UsacParams_loMethod_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_loMethod_set(void* self, int val);
extern "C" __declspec(dllexport) int UsacParams_loSampleSize_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_loSampleSize_set(void* self, int val);
extern "C" __declspec(dllexport) int UsacParams_maxIterations_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_maxIterations_set(void* self, int val);
extern "C" __declspec(dllexport) int UsacParams_neighborsSearch_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_neighborsSearch_set(void* self, int val);
extern "C" __declspec(dllexport) int UsacParams_randomGeneratorState_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_randomGeneratorState_set(void* self, int val);
extern "C" __declspec(dllexport) int UsacParams_sampler_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_sampler_set(void* self, int val);
extern "C" __declspec(dllexport) int UsacParams_score_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_score_set(void* self, int val);
extern "C" __declspec(dllexport) double UsacParams_threshold_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_threshold_set(void* self, double val);
extern "C" __declspec(dllexport) int UsacParams_final_polisher_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_final_polisher_set(void* self, int val);
extern "C" __declspec(dllexport) int UsacParams_final_polisher_iterations_get(void* self);
extern "C" __declspec(dllexport) void UsacParams_final_polisher_iterations_set(void* self, int val);
extern "C" __declspec(dllexport) void cv_approxPolyDP_0(void* curve, void* approxCurve, double epsilon, bool closed);
extern "C" __declspec(dllexport) void cv_approxPolyN_0(void* curve, void* approxCurve, int nsides, float epsilon_percentage, bool ensure_convex);
extern "C" __declspec(dllexport) void* cv_minAreaRect_0(void* points);
extern "C" __declspec(dllexport) void cv_boxPoints_0(void* box, void* points);
extern "C" __declspec(dllexport) void cv_minEnclosingCircle_0(void* points, cv::Point2f center, float radius);
extern "C" __declspec(dllexport) double cv_minEnclosingTriangle_0(void* points, void* triangle);
extern "C" __declspec(dllexport) double cv_minEnclosingConvexPolygon_0(void* points, void* polygon, int k);
extern "C" __declspec(dllexport) void* cv_moments_0(void* array, bool binaryImage);
extern "C" __declspec(dllexport) void cv_HuMoments_0(void* m, void* hu);