src/OpenCV5Sharp/Generated/NativeMethods.Geometry.cs


namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSTEdge_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int MSTEdge_source_get(MSTEdgeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSTEdge_source_set(MSTEdgeHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int MSTEdge_target_get(MSTEdgeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSTEdge_target_set(MSTEdgeHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double MSTEdge_weight_get(MSTEdgeHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSTEdge_weight_set(MSTEdgeHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Subdiv2D_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Subdiv2D_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Subdiv2D_New_1(Rect rect);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Subdiv2D_New_2(Rect2F rect2f);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Subdiv2D_initDelaunay_0(Subdiv2DHandle self, Rect rect);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Subdiv2D_initDelaunay_1(Subdiv2DHandle self, Rect2F rect);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Subdiv2D_insert_0(Subdiv2DHandle self, Point2F pt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Subdiv2D_insert_1(Subdiv2DHandle self, IntPtr ptvec);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Subdiv2D_locate_0(Subdiv2DHandle self, Point2F pt, int edge, int vertex);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Subdiv2D_findNearest_0(Subdiv2DHandle self, Point2F pt, IntPtr nearestPt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Subdiv2D_getEdgeList_0(Subdiv2DHandle self, IntPtr edgeList);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Subdiv2D_getLeadingEdgeList_0(Subdiv2DHandle self, IntPtr leadingEdgeList);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Subdiv2D_getTriangleList_0(Subdiv2DHandle self, IntPtr triangleList);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Subdiv2D_getVoronoiFacetList_0(Subdiv2DHandle self, IntPtr idx, IntPtr facetList, IntPtr facetCenters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point2F Subdiv2D_getVertex_0(Subdiv2DHandle self, int vertex, IntPtr firstEdge);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Subdiv2D_getEdge_0(Subdiv2DHandle self, int edge, int nextEdgeType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Subdiv2D_nextEdge_0(Subdiv2DHandle self, int edge);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Subdiv2D_rotateEdge_0(Subdiv2DHandle self, int edge, int rotate);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Subdiv2D_symEdge_0(Subdiv2DHandle self, int edge);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Subdiv2D_edgeOrg_0(Subdiv2DHandle self, int edge, IntPtr orgpt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Subdiv2D_edgeDst_0(Subdiv2DHandle self, int edge, IntPtr dstpt);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr UsacParams_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double UsacParams_confidence_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_confidence_set(UsacParamsHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool UsacParams_isParallel_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_isParallel_set(UsacParamsHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_loIterations_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_loIterations_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_loMethod_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_loMethod_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_loSampleSize_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_loSampleSize_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_maxIterations_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_maxIterations_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_neighborsSearch_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_neighborsSearch_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_randomGeneratorState_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_randomGeneratorState_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_sampler_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_sampler_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_score_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_score_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double UsacParams_threshold_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_threshold_set(UsacParamsHandle self, double val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_final_polisher_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_final_polisher_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UsacParams_final_polisher_iterations_get(UsacParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UsacParams_final_polisher_iterations_set(UsacParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_approxPolyDP_0(MatHandle curve, MatHandle approxCurve, double epsilon, [MarshalAs(UnmanagedType.U1)] bool closed);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_approxPolyN_0(MatHandle curve, MatHandle approxCurve, int nsides, float epsilon_percentage, [MarshalAs(UnmanagedType.U1)] bool ensure_convex);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_minAreaRect_0(MatHandle points);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_boxPoints_0(RotatedRectHandle box, MatHandle points);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_minEnclosingCircle_0(MatHandle points, Point2F center, float radius);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_minEnclosingTriangle_0(MatHandle points, MatHandle triangle);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_minEnclosingConvexPolygon_0(MatHandle points, MatHandle polygon, int k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_moments_0(MatHandle array, [MarshalAs(UnmanagedType.U1)] bool binaryImage);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_HuMoments_0(MomentsHandle m, MatHandle hu);
